[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "motoko"
description = "A modular Discord bot"
version = "2025.8.25"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Fritz", email = "fritz@g01iath.online"}
]

dependencies = [
    "discord.py>=2.6.2",
    "requests>=2.32.5",
]

[project.urls]
Repository = "https://github.com/fritztafer/motoko"